--- a/src/Dijkstra.html
+++ b/src/Dijkstra.html
@@ -4,8 +4,8 @@
             Dijkstra
         </title>
         <!--Local CSS import-->
-        <link href="src/vis.css" type="text/css" />
-        <link rel="stylesheet" href="src/index.css" type="text/css" />
+        <link href="css/vis.css" type="text/css" />
+        <link rel="stylesheet" href="css/index.css" type="text/css" />
         <!--Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
@@ -80,8 +80,8 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <!--Script Import -->
-        <script src="src/vis.js" type="text/javascript"></script>
-        <script src="src/jsgraphs.js" type="text/javascript"></script>
+        <script src="js/vis.js" type="text/javascript"></script>
+        <script src="js/jsgraphs.js" type="text/javascript"></script>
 
 
         <!-- Belman Algorithm-->
