use less instead of css

--- a/src/belman.html
+++ b/src/belman.html
@@ -6,9 +6,13 @@
         <meta author content="Vivien Gontier / Théo Carel">
         <!--Local CSS import-->
         <link href="css/vis.css" type="text/css" />
-        <link rel="stylesheet" href="css/index.css" type="text/css" />
+        <!--<link rel="stylesheet" href="css/index.css" type="text/css" />-->
         <!--Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <!--Less Import-->
+        <link rel="stylesheet/less" type="text/css" href="css/index.less" />
+        <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
+
     </head>
     
     <body>
